--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Phoomparin Mano <phoomparin@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "firebase": "firebase",
     "start": "parcel src/views/index.pug",
     "build": "parcel build --public-url '.' src/views/index.pug"
   },
@@ -18,6 +19,7 @@
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-standard": "^4.0.1",
+    "firebase-tools": "^7.12.1",
     "husky": "^3.0.9",
     "lint-staged": ">=8",
     "parcel-bundler": "^1.12.4",
